feat: configure Spring Security with JWT and CORS
- Setup security filter chain with JWT authentication
- Configure CORS for cross-origin requests
- Add BCrypt password encoder configuration